force-app/main/default/objects/SalesforceDocSelected__x/SalesforceDocSelected__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceDocSelected</externalName>
    <label>Documento Selezionato Salesforce</label>
    <pluralLabel>Documenti Selezionati Salesforce</pluralLabel>
</CustomObject>