force-app/main/default/objects/SalesforceDocSelected__x/fields/CaseC__c.field-meta.xml
<CustomField>
    <fullName>CaseC__c</fullName>
    <description>CaseC</description>
    <externalDeveloperName>CaseC</externalDeveloperName>
    <label>Case</label>
    <length>18</length>
    <referenceTo>SalesforceCase__x</referenceTo>
    <relationshipLabel>Documenti Selezionati Salesforce</relationshipLabel>
    <relationshipName>DocumentiSelezionatiSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>