force-app/main/default/objects/SalesforceDocSelected__x/fields/IssuingCompanyC__c.field-meta.xml
<CustomField>
    <fullName>IssuingCompanyC__c</fullName>
    <description>IssuingCompanyC</description>
    <externalDeveloperName>IssuingCompanyC</externalDeveloperName>
    <label>Società Emittente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>