force-app/main/default/objects/SalesforceDocSelected__x/fields/PaymentChannelC__c.field-meta.xml
<CustomField>
    <fullName>PaymentChannelC__c</fullName>
    <description>PaymentChannelC</description>
    <externalDeveloperName>PaymentChannelC</externalDeveloperName>
    <label>Canale Di Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>