force-app/main/default/objects/SalesforceDocSelected__x/fields/PaymentModeC__c.field-meta.xml
<CustomField>
    <fullName>PaymentModeC__c</fullName>
    <description>PaymentModeC</description>
    <externalDeveloperName>PaymentModeC</externalDeveloperName>
    <label>Modalità di Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>