force-app/main/default/objects/SalesforceDocSelected__x/fields/Position3C__c.field-meta.xml
<CustomField>
    <fullName>Position3C__c</fullName>
    <description>Position3C</description>
    <externalDeveloperName>Position3C</externalDeveloperName>
    <label>Posizione 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>