force-app/main/default/objects/SalesforceDocSelected__x/fields/ResidueC__c.field-meta.xml
<CustomField>
    <fullName>ResidueC__c</fullName>
    <description>ResidueC</description>
    <externalDeveloperName>ResidueC</externalDeveloperName>
    <label>ResidueC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>